--- a/index.html
+++ b/index.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Xarastoph's Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        body {
+            text-align: center;
+        }
+
+        table {
+            margin: auto;
+        }
+
+        button {
+            width: 48px;
+        }
+    </style>
+</head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <h1>Calculator</h1>
+    <table>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-dark">+</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">-</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">×</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">÷</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-dark">7</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">8</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">9</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">%</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-dark">4</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">5</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">6</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">x<sup>y</sup></button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-dark">1</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">2</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">3</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">√</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-dark">0</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">C</button>
+            </td>
+            <td>
+                <button type="button" class="btn btn-dark">=</button>
+            </td>
+        </tr>
+    </table>
   </body>
 </html>
